# Payroll-LLM-Extractor

./: .gitignore  2025-01-09 2 Payroll Set.rtf  PDF or Excel.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  app.py  generate_populated_csv.py  lets_do_this.py  main.py  prompt.txt  pyproject.toml  requirements.txt  to_run_files.py
Data/CSV_Templates/: NewBaltimo 532025 to 5162025.csv  NewBaltimore 1-11-2025 to 1-24-2025.csv  TownSharon 6-30-2025 to 6-30-2025.csv
Data/input_files/: payroll register report 5325 to 51625.xlsx
Data/logs/: failed_chunks.json
Data/pdf_ones/: all_extracted_employees_pdf.json  employee_chunks_raw_pdf.json
Data/raw_chunks/: employee_chunks_raw.json
Extract_data_from_rtf/newbaltimore/: 2025-01-03 1 Payroll Set.docx  2025-01-17 3 Payroll Set.docx  2025-01-31 4 Payroll Set.docx  2025-02-14 5 Payroll Set.docx  2025-02-28 6 Payroll Set.docx  2025-03-14 7 Payroll Set.docx  2025-03-28 8 Payroll Set.docx  2025-03-31 2 Payroll Set.docx  2025-04-11 9 Payroll Set.docx  2025-04-25 11 Payroll Set.docx  2025-05-09 12 Payroll Set.docx  convert-pdf-rtf.py
Extract_data_from_rtf/rtfpdffilesfornewbaltimore/: 2025-01-03 1 Payroll Set.rtf  2025-01-17 3 Payroll Set.rtf  2025-01-31 4 Payroll Set.rtf  2025-02-14 5 Payroll Set.rtf  2025-02-28 6 Payroll Set.rtf  2025-03-14 7 Payroll Set.rtf  2025-03-28 8 Payroll Set.rtf  2025-03-31 2 Payroll Set.rtf  2025-04-11 9 Payroll Set.rtf  (+5 more)
agent_project/: agents.py  clients.xlsx  opt.py  payroll_upload_bot.py  save_login_script.py
src/: excel_raw_text_chunk.py  populate_csv_template.py  send_chunk_llm.py
(+54 files in other folders)
